[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cwcs"
version = "1.0.0"
description = "Corpus-Wide Causal Scoring framework for Gene-Disease causal discovery"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.8"
authors = [
    {name = "CWCS Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "networkx>=2.8.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
neo4j = [
    "neo4j>=5.0.0",
]
llm = [
    "openai>=1.0.0",
    "instructor>=0.5.0",
    "tiktoken>=0.5.0",
    "pydantic>=2.0.0",
    "tqdm>=4.65.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
    "black",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/nency2/CWCS"
Repository = "https://github.com/nency2/CWCS"

[project.scripts]
cwcs-pipeline = "src.pipeline:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'
